# labs_coordinate_music

./: .gitignore  README.md  __init__.py  __main__.py  coordmusictests.py  coordmusictools.py  coordmusicuserconfig.py.template  coordmusicutil.py  easypythonmutagen.py  main.py  recurring_coordinate.py  recurring_linkspotify.py  recurring_music_to_url.py  setup.cfg
ben_python_common/: __init__.py  common_ui.py  common_util.py  files.py  setup.cfg  tests.py  winprocess.py
ben_python_common/tests/: test_commonutil.py  test_files.py
labs_coordinate_music/: .gitignore  __main__.py  coordmusictools.py  coordmusicuserconfig.py.template  coordmusicutil.py  directory_structure.md  easypythonmutagen.py  pyproject.toml  recurring_coordinate.py  recurring_linkspotify.py  recurring_music_to_url.py  requirements.txt  setup.cfg
labs_coordinate_music/ben_python_common/: common_util.py
labs_coordinate_music/ben_python_common/tests/: test_commonutil.py
labs_coordinate_music/tests/: __init__.py  common.py  test_coordinate.py  test_coordmusicutil.py  test_id3tags.py  ui_end_to_end_tests.py  ui_tests.py
labs_coordinate_music/tests/media/: flac.flac  m4a224.m4a  m4a24.m4a  test_03_31.m4a
labs_coordinate_music/wavcut/: main.cpp  util.cpp  util.h  wav.cpp  wav.h  wavcut.cpp
test/media/: test_04_19.m4a
tests/: test_coordinate.py  test_coordmusicutil.py  test_id3tags.py  ui_tests.py
tests/media/: m4a128.m4a  m4a16.m4a  test_02_52.m4a
wavcut/: Makefile  README.md  main.cpp  util.cpp  util.h  wav.cpp  wav.h  wavcut.cpp  wavcut.h
