

[project]
name = "labs_coordinate_music"
version = "0.9"
authors = [
  { name="Ben Fisher", email="shinerainseven@gmail.com" },
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]
description = "Help keep a local music library organized"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "shinerainsevenlib",
  "mutagen",
  "spotipy",
  "pyperclip",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "ruff",
    "pytest",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/moltenform/labs_coordinate_music"
Issues = "https://github.com/moltenform/labs_coordinate_music/issues"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]

[tool.pylint.'MESSAGES CONTROL']

[tool.shinerainsevenlib]
config_collection_legacy = 1
pylint_import_suggested_other_settings = 1
rufflint_import_suggested_other_settings = 1
hide_init_py_while_linting = 1

rufflint_ignore = [
    'S101', # we have asserts instead of assertTrue
    'PLW0603', # update global
    'S607', # start process without full path
]

pylint_specific_ignore_containing = [
    # skip this - we don't care about it for Bucket
    "E1101: Instance of 'Bucket' has no",
    # skip this - we don't care about it for fixtures
    "W0621: Redefining name 'fixture_",
    "Access to a protected member _get of",
    "Access to a protected member _get_id of",
]

rufflint_specific_ignore_containing = [
    'F821 Undefined name `basestring`',
]

format_skip_if_path_contains = [
    '/OUTSIDE/'
]

[tool.yapf]

# after this, manually clean up menu in __main__.py

# styles: google, pep8, yapf, facebook
based_on_style = "facebook"
spaces_before_comment = 1
split_before_logical_operator = false
column_limit = 120
indent_width = 4


